<resources>
    <string name="app_name">Air Voice</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_player">Now Playing</string>
    <string name="title_activity_infosheet">Info Sheet</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_channels">No Channels</string>
    <string name="menu_about">About</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_howto">How to use</string>
    <string name="menu_timer">Sleep timer</string>
    <string name="menu_icon">Change icon</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_shortcut">Place on Home screen</string>
    <string name="menu_favorite">Favorites</string>
    <string name="header_about">About</string>
    <string name="header_howto">How to use</string>
    <string name="descr_arrow_actioncall">Arrow pointing towards the add station symbol</string>
    <string name="descr_overflow_button">Display options for radio station</string>
    <string name="descr_station_icon">Icon of radio station</string>
    <string name="descr_station_name">Name of radio station</string>
    <string name="descr_station_metadata">Metadata (Artist / Title) of currently playing radio station</string>
    <string name="descr_station_name_example">Example FM</string>
    <string name="descr_station_metadata_example">Artist - Title</string>
    <string name="descr_station_stream_loading">Loading stream …</string>
    <string name="descr_playback_button">Big playback button</string>
    <string name="descr_playback_indicator">Indicator for running playback</string>
    <string name="descr_playback_indicator_started">Indicator for running playback</string>
    <string name="descr_timer_indicator_started">Indicator for running sleep timer</string>
    <string name="descr_player_sheet_information_icon">Information Icon</string>
    <string name="descr_player_sheet_content_copy_icon">Content copy icon</string>
    <string name="descr_player_sheet_p_station_name">Name of selected radio station</string>
    <string name="descr_player_sheet_p_station_metadata">Metadata from selected radio station</string>
    <string name="descr_player_sheet_p_stream_url">Stream URL of selected radio station</string>
    <string name="player_sheet_h1_station_name">Station</string>
    <string name="player_sheet_h1_station_metadata">Currently Playing</string>
    <string name="player_sheet_h1_stream_url">Stream URL</string>
    <string name="player_sheet_p_station_metadata">no metadata available</string>
    <string name="player_sheet_h1_station_mime_type">MIME type</string>
    <string name="player_sheet_h1_station_channel_count">Channel count</string>
    <string name="player_sheet_h1_station_sample_rate">Sample rate</string>
    <string name="player_sheet_h1_station_bitrate">Bitrate</string>
    <string name="dialog_generic_button_okay">Okay</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_add_station_button">Add</string>
    <string name="dialog_add_station_input_hint">Paste a valid streaming URL</string>
    <string name="dialog_add_station_message">Add new station</string>
    <string name="dialog_add_station_howto">You can add raw audio streams encoded in MP3 and OGG as well as streams encapsulated in pls or m3u files. Alternatively you can add new stations by tapping on streaming links (pls or m3u) in your web browser.</string>
    <string name="dialog_delete_station_message">Delete station</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_rename_station_input_hint">Enter a new name</string>
    <string name="dialog_rename_station_message">Rename station</string>
    <string name="dialog_button_rename">Rename</string>
    <string name="dialog_error_title_default">Error</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_details_button_default">Show details</string>
    <string name="dialog_error_details_default">No details available</string>
    <string name="dialog_error_details_write">Station is probably a duplicate or else you might want to check your external storage.</string>
    <string name="dialog_error_title_fetch_download">Download Issue</string>
    <string name="dialog_error_title_fetch_read">Read Issue</string>
    <string name="dialog_error_title_fetch_write">Write Issue</string>
    <string name="dialog_error_message_fetch_general_external_storage">External storage:</string>
    <string name="dialog_error_message_fetch_general_hint_m3u">Hint: Air Voice can only process MP3 and OGG encoded streams or URLs ending in .m3u or .pls.</string>
    <string name="dialog_error_message_fetch_general_playlist_type">MIME type of file:</string>
    <string name="dialog_error_message_fetch_general_stream_type">MIME type of stream:</string>
    <string name="dialog_error_message_fetch_general_file_content">Content of file:</string>
    <string name="dialog_error_message_fetch_download">Air Voice tried hard but could not make sense of given link.</string>
    <string name="dialog_error_message_fetch_download_station_url">URL of station:</string>
    <string name="dialog_error_message_fetch_read">Air Voice tried hard but could not make sense of given file.</string>
    <string name="dialog_error_message_fetch_read_file_location">Location of file:</string>
    <string name="dialog_error_message_fetch_write">Air Voice tried hard but could not save given station to storage.</string>
    <string name="actioncall_message_start_here">Add a new station</string>
    <string name="toastmessage_add_download_started">Download started.</string>
    <string name="toastmessage_add_open_file_started">Opening file.</string>
    <string name="toastmessage_long_press_playback_stopped">Playback stopped (long press detected)</string>
    <string name="toastmessage_long_press_playback_started">Playback started (long press detected)</string>
    <string name="toastmessage_shortcut_created">Shortcut created.</string>
    <string name="toastmessage_copied_to_clipboard_url">Stream URL copied to clipboard.</string>
    <string name="toastmessage_copied_to_clipboard_metadata">Metadata copied to clipboard.</string>
    <string name="toastmessage_station_copied">Station copied to clipboard.</string>
    <string name="toastmessage_stream_may_not_work">Unsupported audio format detected. Playback of stream may not work properly.</string>
    <string name="toastmessage_timer_activated">Sleep timer activated.</string>
    <string name="toastmessage_timer_cancelled">Sleep timer cancelled.</string>
    <string name="toastmessage_timer_duration_increased">Duration increased.</string>
    <string name="toastmessage_timer_start_unable">Please start playback first.</string>
    <string name="toastalert_rename_unsuccessful">Unable to rename station. Please choose a different name.</string>
    <string name="toastalert_delete_successful">Station removed.</string>
    <string name="toastalert_no_external_storage">Unable to access external storage.</string>
    <string name="toastalert_headphones_unplugged">Headphones unplugged. Playback stopped.</string>
    <string name="toastalert_permission_denied">Permission denied:</string>
    <string name="toastalert_station_not_found">Unable to find station.</string>
    <string name="toastalert_stream_not_found">Air Voice does not recognize this station. Please delete and add it again to the Home screen.</string>
    <string name="snackbar_request_storage_access">Air Voice needs to be granted read permissions to be able access data from external storage.</string>
    <string name="snackbar_message_timer_set">Sleep timer set to</string>
    <string name="notification_play">Play</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_next">Next</string>
    <string name="notification_previous">Previous</string>
    <string name="notification_close">Close</string>
    <string name="notification_swipe_to_stop">Swipe to stop</string>
    <string name="notification_playing">Playing</string>
    <string name="infosheet_about_h1_about">About Air Voice</string>
    <string name="infosheet_about_h2_radio">Radio app for Android</string>
    <string name="infosheet_about_h3_version">Version 1.0</string>
    <string name="infosheet_about_p_bare">Air Voice is a bare bones app for listening to radio programs over the internet. The app stores stations as files on your device\'s external storage. Look for files of type m3u within /Android/data/org.rajmoh.radio/files/Collection. It currently understands streams encoded in MP3 and OGG.</string>
    <string name="infosheet_about_p_note">Important note: This is an app of type BYOS (&quot;bring your own station&quot;). It does not feature any kind of built-in search option. You will have to manually add radio stations.</string>
    <string name="infosheet_about_p_free">Air Voice is free software. It is published under the MIT open source license. You can find the code on GitHub. GitHub is also a good place to file bugs or even to contribute, if you are interested.</string>
    <string name="infosheet_about_p_github">https://github.com/y20k/Air Voice</string>
    <string name="infosheet_about_p_license">https://opensource.org/licenses/MIT</string>
    <string name="infosheet_about_h2_permissions">Which Permissions does Air Voice need?</string>
    <string name="infosheet_about_h3_shortcut">Permission INSTALL_SHORTCUT and UNINSTALL_SHORTCUT</string>
    <string name="infosheet_about_p_shortcut">This permission is needed to install and uninstall radio station shortcuts on the Android Home screen.</string>
    <string name="infosheet_about_h3_internet">Permission INTERNET</string>
    <string name="infosheet_about_p_internet">Air Voice streams radio stations over the internet.</string>
    <string name="infosheet_about_h3_external">Permission READ_EXTERNAL_STORAGE</string>
    <string name="infosheet_about_p_external">Air Voice needs access to images, photos and documents to be able to customize radio station icons and to able to open locally saved playlist files.</string>
    <string name="infosheet_about_h3_vibrate">Permission VIBRATE</string>
    <string name="infosheet_about_p_vibrate">Tapping and holding a radio station will trigger a tiny vibration.</string>
    <string name="infosheet_about_h3_wakelock">Permission WAKE_LOCK</string>
    <string name="infosheet_about_p_wakelock">During Playback Air Voice acquires a so called partial wake lock. That prevents the Android system to stop playback for power saving reasons.</string>
    <string name="infosheet_howto_h1_howto">How to use Air Voice</string>
    <string name="infosheet_howto_h2_add">How to add a new radio station?</string>
    <string name="infosheet_howto_p_add">The easiest way to add a new station is to search the web for streaming links and then choose Air Voice as a your default handler for those file types. You can also tap the (+) symbol in the top bar and paste in streaming links directly. Please note: Air Voice does not feature any kind of built-in search option.</string>
    <string name="infosheet_howto_h2_play">How to play back a radio station?</string>
    <string name="infosheet_howto_p_play">Tap the big Play button ;).</string>
    <string name="infosheet_howto_h2_stop">How to stop playback?</string>
    <string name="feedback_heading">Feedback</string>
    <string name="email_hint">your email</string>
    <string name="message_hint">your message</string>
    <string name="submit">Submit</string>
    <string name="banner_ads_id">ca-app-pub-5996879671606073/1331895147</string>
</resources>