<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_h1_about"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_h2_radio"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_h3_version"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/infosheet_about_p_bare"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/infosheet_about_h2_permissions"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/infosheet_about_h3_shortcut"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_p_shortcut"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/infosheet_about_h3_internet"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_p_internet"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/infosheet_about_h3_external"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_p_external"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/infosheet_about_h3_vibrate"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_p_vibrate"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/infosheet_about_h3_wakelock"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infosheet_about_p_wakelock"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"

        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ads_id"></com.google.android.gms.ads.AdView>

</FrameLayout>


