<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_timer"
        android:icon="@drawable/ic_timer_white_24dp"
        android:title="@string/menu_timer"
        android:visible="true"
        app:showAsAction="always" />



    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:visible="true"
        android:icon="@drawable/ic_info_icon"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_facebook"
        android:title="@string/like_us_on_facebook"
        android:visible="true"
        android:icon="@mipmap/ic_thumbs_up"
        app:showAsAction="withText" />


    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_feedback"
        android:visible="true"
        android:icon="@drawable/ic_feedback_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorites"
        android:title="@string/menu_feedback"
        android:visible="true"
        android:icon="@drawable/ic_favorite_icon"
        app:showAsAction="always" />

</menu>