<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.rajmoh.radio.PlayerActivityFragment">

    <!-- BOTTOM SHEET -->
    <include layout="@layout/fragment_player_bottomsheet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transistor_grey_dark"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- REMOVE PLACEHOLDERS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#ffffff"
            android:dividerPadding="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_imageview_station_icon"
                android:layout_width="?android:attr/listPreferredItemHeight"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:contentDescription="@string/descr_station_icon"
                android:minHeight="?android:attr/listPreferredItemHeight"
                app:srcCompat="@drawable/ic_notesymbol_36dp" />

            <LinearLayout
                android:id="@+id/player_layout_station_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingEnd="2dp"
                android:paddingStart="24dp">

                <TextView
                    android:id="@+id/player_textview_stationname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_station_name"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/descr_station_name_example"
                    android:textAppearance="@android:style/TextAppearance.Large.Inverse" />

                <TextView
                    android:id="@+id/player_textview_station_metadata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descr_station_metadata"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/descr_station_stream_loading"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse"
                    android:visibility="gone" />

            </LinearLayout>

            <ImageView
                android:id="@+id/player_playback_indicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/indicator_disable"
                android:contentDescription="@string/descr_playback_indicator"
                android:minHeight="?android:attr/listPreferredItemHeight" />

            <ImageButton
                android:id="@+id/player_item_more_button"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:background="@android:color/transparent"
                android:contentDescription="@string/descr_overflow_button"
                android:paddingEnd="2dp"
                android:paddingStart="4dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_more_vert_white_24dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageButton
                android:id="@+id/player_playback_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@drawable/selector_playback_button"
                android:contentDescription="@string/descr_playback_button"
                android:padding="32dp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>



